# react-native-qmdb

./: .gitignore  CLAUDE.md  LICENSE  README.md  nitro.json  package-lock.json  package.json  react-native-qmdb.podspec  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle
cpp/: HybridQMDB.hpp  OnLoad.cpp
ios/: QMDBBridge.h
rust/: Cargo.toml
rust/src/: error.rs  ffi.rs  lib.rs  state.rs
scripts/: build-android.sh  build-ios.sh
src/: QMDB.nitro.ts  index.ts
src/__tests__/: setup.ts
src/__tests__/context/: qmdb-context.test.tsx
src/__tests__/hooks/: use-proof.test.tsx  use-qmdb.test.tsx  use-sync.test.tsx
src/__tests__/integration/: full-workflow.test.tsx
src/__tests__/utils/: digest.test.ts  hex.test.ts
src/context/: index.ts  qmdb-context.tsx
src/hooks/: index.ts  use-proof.ts  use-qmdb.ts  use-sync.ts
src/native/: index.ts  mock.ts  module.ts
src/types/: database.ts  index.ts  native.ts
src/utils/: digest.ts  hex.ts  index.ts
